--- a/colab_notebooks.ipynb
+++ b/colab_notebooks.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "colab_notebooks.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMyT+rIYEsSiRkjlkDU1s1g",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNoV0aXewUxlYNIWNoDttQp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +45,7 @@
         "colab_type": "text"
       },
       "source": [
-        "![대체 텍스트](https://)"
+        "![대체 텍스트](http://drive.google.com/uc?export=view&id=1M37Gml-XjqA6t4evKiaoNCf0bGKJYBYr)"
       ]
     },
     {
